[package]
name = "autel-odl"
version = "0.1.1"
edition = "2024"

[dependencies]
kaitai = { git = "https://github.com/kaitai-io/kaitai_struct_rust_runtime.git", tag = "v0.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4.0"
chrono = "0.4.44"
convert_case = "0.11.0"
